:bug: add privilege escalation
add "become" key to ensure check/installations of required packages

--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -3,7 +3,9 @@
 # Install ZSH and oh-my-zsh
 ##################################
 - name: Install zsh
-  package: name=zsh state=present
+  package:
+    name: zsh
+    state: present
   register: installation
   become: true
 
